Comments UI issues
1) max height for comments increased (message posts)
2) scrollbar changed (message posts comments)

--- a/css/subpage.css
+++ b/css/subpage.css
@@ -700,7 +700,8 @@ font-family: tahoma;
 }
 
 .user-comm-msg{
- height: 86px;
+ height: auto;
+ max-height:150px;
     margin: 13px 0 0 13px;
     overflow-x: hidden;
     overflow-y: scroll;
